[metadata]
name = tdim
description = A simple tool for displaying terminal dimensions
version = attr: tdim.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/tdim
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = terminal
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Terminals
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/tdim/blob/main/README.md
    Source = https://github.com/davep/tdim
    Issues = https://github.com/davep/tdim/issues
    Discussions = https://github.com/davep/tdim/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    textual>=0.52.1
python_requires = >=3.8

[options.package_data]
tdim = py.typed

[options.entry_points]
console_scripts =
    tdim = tdim.__main__:run

### setup.cfg ends here
